# dot_files

./: .gitignore  .zsh_history  alfred.md  distrobox.ini  test.json  test.py  test_lean.lean
agents/: CLAUDE.md  alfred.md  architecture.md  compose.yaml  config.toml  pyproject.toml
agents/chains/: thinking_test_v1.yaml
agents/controller/: chain.py  main.py  models.py  qdrant.py  runner.py  test_controller.py
agents/flows/: programming_v1.py  thinking_v1.py
agents/roles/: template.md
agents/roles/personalities/: black.md  blue.md  green.md  red.md  white.md  yellow.md
agents/roles/system/: bartimeo.md  debate.md  meta.md  recruiter.md
agents/teams/debate/: flow.py
agents/teams/debate/roles/: analista.md  domandatore.md  elaboratore.md  ricercatore.md  scrittore.md
agents/teams/recruiter/: flow.py
agents/teams/recruiter/roles/: propositore_eccentrico.md  propositore_standard.md  recruiter.md  sintetizzatore.md
agents/template/flows/: programming_v1.py  thinking_v1.py
agents/template/roles/: template.md
agents/template/roles/personalities/: black.md  blue.md  green.md  red.md  white.md  yellow.md
alacritty_files/: alacritty.toml
bar_files/: config  style.css
emacs_files/: early-init.el  init.el  init.el~
ghostty_files/: config  cursor-smooth.glsl
hypr_files/: bar_files  hyprland.conf
niri_files/: config.kdl
nix_files/: README.md  configuration.nix  flake.nix  ghostty.nix  home.nix  hyprland.nix  nushell.nix  waybar.nix  wofi.nix
noctalia_files/: settings.json
nu_files/: README.md  aliases.nu  basic.nu  config.nu  env.nu  env.sh  (+2 more)
(+111 files in other folders)
